testsuite/tests/safeHaskell/unsafeLibs/Dep05.stderr

Dep05.hs:7:1: error: [GHC-44360]
    GHC.Arr: Can't be safely imported! The module itself isn't safe.
